# furever

./: AGENTS.md  README.md
.cursor/: hooks.json
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/core/: config.py  deps.py  response.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/middleware/: logging_middleware.py
backend/app/models/: __init__.py  schemas.py
backend/app/repositories/: base.py
backend/app/repositories/mock/: __init__.py  checkin_repo.py  comment_like_repo.py  comment_repo.py  follow_repo.py  interaction_repo.py  mock_data.py  notification_repo.py  points_repo.py  post_repo.py  profile_repo.py  storage.py  user_repo.py
backend/app/routers/: __init__.py  auth.py  checkin.py  comments.py  follow.py  health.py  interactions.py  notifications.py  points.py  posts.py  upload.py  users.py
backend/app/schemas/: auth.py  checkin.py  comment.py  common.py  follow.py  interaction.py  notification.py  points.py  post.py  upload.py  user.py
backend/app/services/: __init__.py  auth_service.py  checkin_service.py  comment_service.py  follow_service.py  interaction_service.py  notification_service.py  points_service.py  post_service.py  profile_service.py  upload_service.py  user_service.py
backend/app/utils/: idempotency.py  image.py  pagination.py
backend/deploy/: README.md  nginx.conf  supervisor.conf
backend/sql/: init.sql
docs/: petglow-architecture.excalidraw  petglow-sequence-diagram.excalidraw
frontend/: index.html  manifest.json  (+3 more)
(+66 files in other folders)
